WIP: Enhance OCR service with error handling and configuration updates
- Added BATCH_SIZE to EasyOCR configuration in config.json
- Implemented OcrConfigException for error handling during EasyOCR initialization
- Updated extract_text method to return OcrOutput with processing details
- Introduced OcrOutput model for structured output
- Created exception and types modules with necessary classes

--- a/config.json
+++ b/config.json
@@ -13,8 +13,11 @@
         ".jfif"
     ],
     "EASY_OCR": {
-        "LANGUAGES": ["en"],
+        "LANGUAGES": [
+            "en"
+        ],
         "GPU": false,
-        "MODEL_STORAGE_DIRECTORY": "models/"
+        "MODEL_STORAGE_DIRECTORY": "models/",
+        "BATCH_SIZE": 2
     }
 }
