--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "OCR_ENGINE": "easyocr",
+    "OCR_ENGINE": "tesseract",
     "MAX_FILE_SIZE_BYTES": 10485760,
     "ALLOWED_FORMATS": [
         "image/jpeg",
